--- a/client/client.html
+++ b/client/client.html
@@ -116,6 +116,13 @@
       handleResponse(response, mapForm);
     }
 
+    const commentMap = async (commentForm) => {
+      const nameForm = document.querySelector('#nameForm');
+      const userForm = document.querySelector('#userForm');
+
+      //const inputComment = commentForm.querySelector('#')
+    }
+
     const init = () => {
       const nameForm = document.querySelector('#nameForm');
       const userForm = document.querySelector('#userForm');
@@ -138,9 +145,9 @@
         e.preventDefault();
         console.log("Works so far");
         searchFor(mapForm);
-        //console.log(mapForm);
-        //console.log(document.querySelector('#searchIndex').value);
-        //console.log(document.querySelector('#mapField').value);
+        console.log(mapForm);
+        console.log(document.querySelector('#searchIndex').value);
+        console.log(document.querySelector('#mapField').value);
         return false;
       }
 
