Attempting to add the comment, prev, and next functions

--- a/client/client.html
+++ b/client/client.html
@@ -45,7 +45,7 @@
         else if(form.method == "get"){
           response.text().then((resText) => {
             let parsedResponse = JSON.parse(resText);
-            let parsedUsers = JSON.stringify(parsedResponse);
+            let parsedUsers = JSON.stringify(parsedResponse.message);
             console.log(parsedResponse);
 
             if(urlField.value == "/getUsers"){
@@ -117,10 +117,46 @@
     }
 
     const commentMap = async (commentForm) => {
-      const nameForm = document.querySelector('#nameForm');
-      const userForm = document.querySelector('#userForm');
+      const nameAction = commentForm.getAttribute('action');
+      const nameMethod = commentForm.getAttribute('method');
 
-      //const inputComment = commentForm.querySelector('#')
+      const commentField = commentForm.querySelector('#commentField');
+
+      const url = `comment=${commentField.value}`;
+
+      let response = await fetch(nameAction, {
+        method: nameMethod,
+        headers: {
+          'Content-Type': 'application/x-www-form-urlencoded',
+          'Accept' : 'application/json',
+        },
+        body: url,
+      });
+
+      console.log(response);
+      handleResponse(response, commentForm);
+    }
+
+    const prevIndex = async (prevButton) => {
+      const nameAction = userForm.getAttribute('action');
+      const nameMethod = userForm.getAttribute('method');
+
+      const button = prevButton.querySelector('#prevButton');
+
+      let response = await fetch(userField.value, {
+        method: nameMethod,
+        headers: {
+          'Content-Type': 'application/x-www-form-urlencoded',
+          'Accept': 'application/json',
+        },
+      });
+
+      handleResponse(response, prevButton);
+    }
+
+    const nextIndex = async () => {
+      const nameAction = userForm.getAttribute('action');
+      const nameMethod = userForm.getAttribute('method');
     }
 
     const init = () => {
@@ -128,6 +164,10 @@
       const userForm = document.querySelector('#userForm');
 
       const mapForm = document.querySelector('#mapForm');
+      const commentForm = document.querySelector('#commentForm');
+
+      const prevButton = document.querySelector('#prevButton');
+      const nextButton = document.querySelector('#prevButton');
 
       const addUser = (e) => {
         e.preventDefault();
@@ -143,17 +183,38 @@
 
       const searchMaps = (e) => {
         e.preventDefault();
-        console.log("Works so far");
         searchFor(mapForm);
-        console.log(mapForm);
-        console.log(document.querySelector('#searchIndex').value);
-        console.log(document.querySelector('#mapField').value);
+        return false;
+      }
+
+      const postComment = (e) => {
+        e.preventDefault();
+        commentMap(commentForm);
+        return false;
+      }
+
+      const getPrev = (e) => {
+        e.preventDefault();
+        prevIndex(prevForm);
+        return false;
+      }
+
+      const getNext = (e) => {
+        e.preventDefault();
+        nextIndex(nextForm);
         return false;
       }
 
       nameForm.addEventListener('submit', addUser);
       userForm.addEventListener('submit', getUsers);
+
+
       mapForm.addEventListener('submit', searchMaps);
+      commentForm.addEventListener('submit', postComment);
+
+
+      prevButton.addEventListener('submit', getPrev);
+      nextButton.addEventListener('submit', getNext);
     };
 
     window.onload = init;
@@ -195,23 +256,20 @@
 
       <input id="mapField" type="text">
       <input type="submit" value="Search">
+
+      <form id="prevForm" action="prevIndex" method="post">
+        <input id="prevButton" type="submit" value="Prev">
+      </form>
+
+      <form id="nextForm" action="nextIndex" method="post">
+        <input id="nextButton" type="submit" value="Next">
+      </form>
     </form>
 
-    <form id="searchResults">
-      <section id="buttons">
-        <input type="submit" value="Prev">
-        <input type="submit" value="Next">
-      </section>
-
-      <section id="searchDisplay">
-        <h3>Loaded data will be displayed here in</h3>
-      </section>
-
-      <form id="comment">
-        <label for="commentField">Have something to say about the map? Add a comment: </label>
-        <input id="commentField" type="text">
-        <input type="submit" value="Comment">
-      </form>
+    <form id="commentForm" action="/commentMap" method="post">
+      <label for="commentField">Have something to say about the map? Add a comment: </label>
+      <input id="commentField" type="text">
+      <input type="submit" value="Comment">
     </form>
     
     <form id="instructions">
