--- a/client/client.html
+++ b/client/client.html
@@ -228,6 +228,7 @@
 </head>
 <body>
   <section id="top">
+    <img src="../images/zombiesPageHeader.png" alt="Page Header" width="100%" height="200px">
     <form id="instructions">
       <h3>This form is going to be used to load a JSON file containing data on maps from the Call of Duty Zombie series. The file lists off multiple maps from throughout the games and various aspects about them. I will attempt to do the following with this:</h3>
       <ul>
@@ -297,6 +298,10 @@
     </form>
   </section>
   <section id="content">
+  </section>
+
+  <section id="footer">
+    <h4>Page header created by me in Adobe Photoshop. Originally from official promo images.</h4>
   </section>
 </body>
 </html>
